src/objects/cb5__CBCube__c.object
<CustomObject>
    <fields>
        <fullName>cb5__AccSubType__c</fullName>
        <formula>cb5__CBAccount__r.cb5__CBSubAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__AccType__c</fullName>
        <formula>cb5__CBAccount__r.cb5__CBAccountType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cb5__Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>cb5__CBScenario__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Diff__c</fullName>
        <formula>cb5__Budget__c -  cb5__Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__DrillDownIds__c</fullName>
        <inlineHelpText>List of Ids related to Cube</inlineHelpText>
        <label>Drill Down Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Sign__c</fullName>
        <formula>TEXT(cb5__CBAccount__r.cb5__CBAccountType__r.cb5__Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign</label>
        <type>Text</type>
    </fields>
    <label>CB Cube</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBPeriod__c</columns>
        <columns>cb5__Actual__c</columns>
        <columns>cb5__Budget__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__CBVariable2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBCube Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Cubes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>